@@ -51,16 +51,22 @@
 #' @author Zixuan Shao, \email{Zixuanshao.zach@@gmail.com}
 #'
 #' @examples
-#' #load example filtered count_table, condition_table and combinations
-#' #generated by comb_gen function
-#' #test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+#' # load example filtered count_table, condition_table and combinations
+#' # generated by comb_gen function
+#' # example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+#' # level
 #' data(count_table.filtered.partial, package = "ERSSA")
 #' data(combinations.partial, package = "ERSSA")
 #' data(condition_table.partial, package = "ERSSA")
 #'
-#' #run erssa_deseq2 with heart condition as control
+#' # run erssa_deseq2 with heart condition as control
 #' deg.partial = erssa_deseq2(count_table.filtered.partial,
 #'   combinations.partial, condition_table.partial, control='heart')
+#'
+#' @references
+#' Love MI, Huber W, Anders S (2014). “Moderated estimation of fold change and
+#' dispersion for RNA-seq data with DESeq2.” Genome Biology, 15, 550. doi:
+#' 10.1186/s13059-014-0550-8.
 #'
 #' @export
 
@@ -208,28 +214,39 @@ erssa_deseq2 = function(count_table.filtered=NULL, combinations=NULL,
 #' the generated DESeq2 result table as csv files. The files are saved on the
 #' drive in the working directory in a new folder named "ERSSA_DESeq2_table".
 #' Tables are saved separately by the replicate level. Default = FALSE.
+#' @param path Path to which the files will be saved. Default to current working
+#' directory.
+#' @param num_workers Number of workers for parallel computing. Default=1.
 #'
 #' @return A list of list of vector. Top list contains elements corresponding to
 #' replicate levels. Each child list contains elements corresponding to
 #' each combination at the respective replicate level. The child vectors
 #' contain differentially expressed gene names.
-#' @param path Path to which the files will be saved. Default to current working
-#' directory.
-#' @param num_workers Number of workers for parallel computing. Default=1.
 #'
 #' @author Zixuan Shao, \email{Zixuanshao.zach@@gmail.com}
 #'
 #' @examples
-#' #load example filtered count_table, condition_table and combinations
-#' #generated by comb_gen function
-#' #only 5000 genes and 4 replicates tested to speed up runtime
+#' # load example filtered count_table, condition_table and combinations
+#' # generated by comb_gen function
+#' # example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+#' # level
 #' data(count_table.filtered.partial, package = "ERSSA")
 #' data(combinations.partial, package = "ERSSA")
 #' data(condition_table.partial, package = "ERSSA")
 #'
-#' #run erssa_deseq2_parallel with heart condition as control
+#' # run erssa_deseq2_parallel with heart condition as control
 #' deg.partial = erssa_deseq2_parallel(count_table.filtered.partial,
-#' combinations.partial, condition_table.partial, control='heart')
+#' combinations.partial, condition_table.partial, control='heart',
+#' num_workers=1)
+#'
+#' @references
+#' Morgan M, Obenchain V, Lang M, Thompson R, Turaga N (2018). BiocParallel:
+#' Bioconductor facilities for parallel evaluation. R package version 1.14.1,
+#' https://github.com/Bioconductor/BiocParallel.
+#'
+#' Love MI, Huber W, Anders S (2014). “Moderated estimation of fold change and
+#' dispersion for RNA-seq data with DESeq2.” Genome Biology, 15, 550. doi:
+#' 10.1186/s13059-014-0550-8.
 #'
 #' @export
 
