@@ -19,8 +19,8 @@
 #' @author Zixuan Shao, \email{Zixuanshao.zach@@gmail.com}
 #'
 #' @examples
-#' #load simple GTeX example count table
-#' #test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+#' # load simple GTeX example count table
+#' # example dataset containing 1000 genes, 4 replicates
 #' data(count_table.partial, package = "ERSSA")
 #'
 #' #filter the counts
