@@ -8,6 +8,17 @@
 #'
 #' @name count_table.full
 #' @references \url{https://jhubiostatistics.shinyapps.io/recount/}
+#'
+#' Melé, Marta, Pedro G. Ferreira, Ferran Reverter, David S. DeLuca, Jean
+#' Monlong, Michael Sammeth, Taylor R. Young, et al. “The Human Transcriptome
+#' across Tissues and Individuals.” Science 348, no. 6235 (May 8, 2015):
+#' 660–65. https://doi.org/10.1126/science.aaa0355.
+#'
+#' Collado-Torres, Leonardo, Abhinav Nellore, Kai Kammers, Shannon E. Ellis,
+#' Margaret A. Taub, Kasper D. Hansen, Andrew E. Jaffe, Ben Langmead, and
+#' Jeffrey T. Leek. “Reproducible RNA-Seq Analysis Using Recount2.” Nature
+#' Biotechnology 35, no. 4 (April 2017): 319–21.
+#' https://doi.org/10.1038/nbt.3838.
 NULL
 
 
@@ -32,6 +43,17 @@ NULL
 #'
 #' @name count_table.partial
 #' @references \url{https://jhubiostatistics.shinyapps.io/recount/}
+#'
+#' Melé, Marta, Pedro G. Ferreira, Ferran Reverter, David S. DeLuca, Jean
+#' Monlong, Michael Sammeth, Taylor R. Young, et al. “The Human Transcriptome
+#' across Tissues and Individuals.” Science 348, no. 6235 (May 8, 2015):
+#' 660–65. https://doi.org/10.1126/science.aaa0355.
+#'
+#' Collado-Torres, Leonardo, Abhinav Nellore, Kai Kammers, Shannon E. Ellis,
+#' Margaret A. Taub, Kasper D. Hansen, Andrew E. Jaffe, Ben Langmead, and
+#' Jeffrey T. Leek. “Reproducible RNA-Seq Analysis Using Recount2.” Nature
+#' Biotechnology 35, no. 4 (April 2017): 319–21.
+#' https://doi.org/10.1038/nbt.3838.
 NULL
 
 
@@ -44,6 +66,17 @@ NULL
 #'
 #' @name count_table.filtered.partial
 #' @references \url{https://jhubiostatistics.shinyapps.io/recount/}
+#'
+#' Melé, Marta, Pedro G. Ferreira, Ferran Reverter, David S. DeLuca, Jean
+#' Monlong, Michael Sammeth, Taylor R. Young, et al. “The Human Transcriptome
+#' across Tissues and Individuals.” Science 348, no. 6235 (May 8, 2015):
+#' 660–65. https://doi.org/10.1126/science.aaa0355.
+#'
+#' Collado-Torres, Leonardo, Abhinav Nellore, Kai Kammers, Shannon E. Ellis,
+#' Margaret A. Taub, Kasper D. Hansen, Andrew E. Jaffe, Ben Langmead, and
+#' Jeffrey T. Leek. “Reproducible RNA-Seq Analysis Using Recount2.” Nature
+#' Biotechnology 35, no. 4 (April 2017): 319–21.
+#' https://doi.org/10.1038/nbt.3838.
 NULL
 
 #' Example table of sample names and conditions
@@ -59,8 +92,7 @@ NULL
 #' Example list of combinations generated by comb_gen function.
 #'
 #' Generated with example sample set that contains 4 replicates each of heart
-#' and muscle from GTeX. 20 combinations generated at replicate=2 and 16 at
-#' replicate=3.
+#' and muscle from GTeX. 10 combinations generated per replicate level.
 #'
 #' @name combinations.partial
 #'
