@@ -5,6 +5,5 @@
 \title{Example list of combinations generated by comb_gen function.}
 \description{
 Generated with example sample set that contains 4 replicates each of heart
-and muscle from GTeX. 20 combinations generated at replicate=2 and 16 at
-replicate=3.
+and muscle from GTeX. 10 combinations generated per replicate level.
 }
