@@ -66,17 +66,23 @@ analysis that is outside the scope of this package.
 The returend list of DE genes is also saved to the drive at specified path.
 }
 \examples{
-#load example filtered count_table, condition_table and combinations
-#generated by comb_gen function
-#test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+# load example filtered count_table, condition_table and combinations
+# generated by comb_gen function
+# example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+# level
 data(count_table.filtered.partial, package = "ERSSA")
 data(combinations.partial, package = "ERSSA")
 data(condition_table.partial, package = "ERSSA")
 
-#run erssa_deseq2 with heart condition as control
+# run erssa_deseq2 with heart condition as control
 deg.partial = erssa_deseq2(count_table.filtered.partial,
   combinations.partial, condition_table.partial, control='heart')
 
+}
+\references{
+Love MI, Huber W, Anders S (2014). “Moderated estimation of fold change and
+dispersion for RNA-seq data with DESeq2.” Genome Biology, 15, 550. doi:
+10.1186/s13059-014-0550-8.
 }
 \author{
 Zixuan Shao, \email{Zixuanshao.zach@gmail.com}
