@@ -69,17 +69,28 @@ analysis that is outside the scope of this package.
 The returend list of DE genes is also saved to the drive at specified path.
 }
 \examples{
-#load example filtered count_table, condition_table and combinations
-#generated by comb_gen function
-#only 5000 genes and 4 replicates tested to speed up runtime
+# load example filtered count_table, condition_table and combinations
+# generated by comb_gen function
+# example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+# level
 data(count_table.filtered.partial, package = "ERSSA")
 data(combinations.partial, package = "ERSSA")
 data(condition_table.partial, package = "ERSSA")
 
-#run erssa_deseq2_parallel with heart condition as control
+# run erssa_deseq2_parallel with heart condition as control
 deg.partial = erssa_deseq2_parallel(count_table.filtered.partial,
-combinations.partial, condition_table.partial, control='heart')
+combinations.partial, condition_table.partial, control='heart',
+num_workers=1)
 
+}
+\references{
+Morgan M, Obenchain V, Lang M, Thompson R, Turaga N (2018). BiocParallel:
+Bioconductor facilities for parallel evaluation. R package version 1.14.1,
+https://github.com/Bioconductor/BiocParallel.
+
+Love MI, Huber W, Anders S (2014). “Moderated estimation of fold change and
+dispersion for RNA-seq data with DESeq2.” Genome Biology, 15, 550. doi:
+10.1186/s13059-014-0550-8.
 }
 \author{
 Zixuan Shao, \email{Zixuanshao.zach@gmail.com}
