@@ -64,9 +64,10 @@ analysis that is outside the scope of this package.
 The returend list of DE genes is also saved to the drive at specified path.
 }
 \examples{
-#load example filtered count_table, condition_table and combinations
-#generated by comb_gen function
-#test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+# load example filtered count_table, condition_table and combinations
+# generated by comb_gen function
+# example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+# level
 data(count_table.filtered.partial, package = "ERSSA")
 data(combinations.partial, package = "ERSSA")
 data(condition_table.partial, package = "ERSSA")
@@ -75,6 +76,11 @@ data(condition_table.partial, package = "ERSSA")
 deg.partial = erssa_edger(count_table.filtered.partial, combinations.partial,
  condition_table.partial, control='heart')
 
+}
+\references{
+Robinson MD, McCarthy DJ, Smyth GK (2010). “edgeR: a Bioconductor package
+for differential expression analysis of digital gene expression data.”
+Bioinformatics, 26(1), 139-140.
 }
 \author{
 Zixuan Shao, \email{Zixuanshao.zach@gmail.com}
