@@ -46,13 +46,18 @@ be reached with resonable low FPR. Such a replicate level is sufficient for
 most studies as additional replicates produce little improvement in TPR.
 }
 \examples{
-#load edgeR deg object generated by erssa_edger using example dataset
-#test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+# load edgeR deg object generated by erssa_edger using example dataset
+# example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+# level
 data(deg.partial, package = "ERSSA")
 data(count_table.filtered.partial, package = "ERSSA")
 
 gg_TPR_FPR = ggplot2_TPR_FPRPlot(deg.partial, count_table.filtered.partial)
 
+}
+\references{
+H. Wickham. ggplot2: Elegant Graphics for Data Analysis.
+Springer-Verlag New York, 2009.
 }
 \author{
 Zixuan Shao, \email{Zixuanshao.zach@gmail.com}
