@@ -34,12 +34,17 @@ horizontal dashed blue line represents the number of DE genes found with
 all samples.
 }
 \examples{
-#load edgeR deg object generated by erssa_edger using example dataset
-#test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+# load edgeR deg object generated by erssa_edger using example dataset
+# example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+# level
 data(deg.partial, package = "ERSSA")
 
 gg_dot = ggplot2_dotplot(deg.partial)
 
+}
+\references{
+H. Wickham. ggplot2: Elegant Graphics for Data Analysis.
+Springer-Verlag New York, 2009.
 }
 \author{
 Zixuan Shao, \email{Zixuanshao.zach@gmail.com}
