@@ -52,12 +52,17 @@ Regardless, in practice, both approaches are likely to generate comparable
 DE gene lists.
 }
 \examples{
-#load edgeR deg object generated by erssa_edger using example dataset
-#test dataset with 1000 genes, 4 replicates and 20 comb. per rep. level
+# load edgeR deg object generated by erssa_edger using example dataset
+# example dataset containing 1000 genes, 4 replicates and 10 comb. per rep.
+# level
 data(deg.partial, package = "ERSSA")
 
 gg_intersect = ggplot2_intersectPlot(deg.partial)
 
+}
+\references{
+H. Wickham. ggplot2: Elegant Graphics for Data Analysis.
+Springer-Verlag New York, 2009.
 }
 \author{
 Zixuan Shao, \email{Zixuanshao.zach@gmail.com}
